# uk-pv-forecast-blend

./: .bumpversion.cfg  .gitignore  Dockerfile  README.md  pyproject.toml  readme.md  requirements.txt
.github/workflows/: branch_ci.yml  docker-publish.yml  release.yaml  test.yaml
forecast_blend/: __init__.py  app.py  blend.py  legacy_gsps.py  save.py  utils.py  weights.py
forecast_blend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
forecast_blend/data/: README.md  gsp_legacy_weights.yaml  model_horizon_mae_scores.csv
forecast_blend/forecast/: data_platform.py  database.py
tests/: conftest.py  test_app.py  test_blend.py  test_blend_utils.py  test_legacy_gsps.py  test_utils.py  test_weights.py
tests/integration/: conftest.py  test_read_from_data_platform.py  test_save_to_data_platform.py
