[build-system]
requires = ["setuptools>=67", "wheel", "setuptools-git-versioning>=2.0,<3"]
build-backend = "setuptools.build_meta"

[project]
name = "uk-pv-forecast-blend"
description = "App for blending PV forecasts"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT License"}
authors = [
    {name = "Open Climate Fix", email = "info@openclimatefix.org"},
]
dependencies = [
    "nowcasting_datamodel==1.7.1",
    "numpy",
    "pandas",
    "time_machine",
    "freezegun",
    "sentry-sdk==2.13.0",
    "testcontainers>=3.5.0",
    "loguru==0.7.3",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest",
    "testcontainers",
]

[project.urls]
repository = "https://github.com/openclimatefix/uk-pv-forecast-blend"

[tool.setuptools]
package-dir = {"" = "forecast_blend"}

[tool.setuptools-git-versioning]
enabled = true
template = "{tag}"
dirty_template = "{tag}.dirty"

# --- TESTING CONFIGURATION --- #

[tool.pytest.ini_options]
testpaths = ["tests"]