[build-system]
requires = ["setuptools>=67", "wheel", "setuptools-git-versioning>=2.0,<3"]
build-backend = "setuptools.build_meta"

[project]
name = "uk-pv-forecast-blend"
description = "App for blending PV forecasts"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = {text = "MIT License"}
authors = [
    {name = "Open Climate Fix", email = "info@openclimatefix.org"},
]
dependencies = [
    "nowcasting_datamodel==1.7.1",
    "numpy",
    "pandas",
    "xarray",
    "time_machine",
    "freezegun",
    "sentry-sdk==2.13.0",
    "testcontainers>=3.5.0",
    "loguru==0.7.3",
    "ruff",
    "pytest",
    "pytest-cov",
    "dp-sdk",
    "betterproto==2.0.0b7",
    "grpclib==0.4.8",
    "pytest-asyncio>=1.2.0",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest",
    "testcontainers",
]

[project.urls]
repository = "https://github.com/openclimatefix/uk-pv-forecast-blend"

[tool.setuptools-git-versioning]
enabled = true
template = "{tag}"
dirty_template = "{tag}"

# --- TESTING CONFIGURATION --- #

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
dp-sdk = { url = "https://github.com/openclimatefix/data-platform/releases/download/v0.13.2/dp_sdk-0.13.2-py3-none-any.whl" }